--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <h1 id="header">Todo List using Javascript</h1>
+    <h1 id="header">To-do List using Javascript</h1>
     <div id="containerDiv">
         <input id="myInput" type="text", placeholder="enter your todo list here">
         <button onclick="newItem()" id="addButton">Add</button>
